2010-09-08  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 1.3.2

	* NEWS: update

2010-08-17  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_get_widget): set a border
	around the list. (rhbz#607513)

	* src/main.c (main): make a dialog resizable.

2010-06-21  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 1.3.1.

	* src/main.c (main): fallback to themed icon if no icons are
	installed. (rhbz#604482)

2010-05-12  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 1.3.0.

	* data/*: Add new icons by Lapo Calamandrei and Jakub Steiner.

2010-04-20  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
	stock icon support.

2010-03-04  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: move ALL_LINGUAS into po/LINGUAS file.

2009-09-14  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 1.2.7.

2009-02-26  Akira TAGOH  <tagoh@redhat.com>

	* src/xfce4-im-chooser.desktop.in: Fix a typo. (rhbz#487275)

2009-02-23  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 1.2.6.

	* src/xfce4-im-chooser.desktop.in: New.

	* src/im-chooser-simple.c: Update for imsettings-0.106.0.
	* requires: require imsettings 0.106.0.

2008-10-22  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_set_property): Fix not
	displaying the translation.

	* src/main.c (main): Show the log out button if restart is required
	for something.

2008-10-10  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_get_widget): code cleanup
	and change the option order.

2008-09-15  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_show_status_icon_on_toggled): 
	new.
	(im_chooser_simple_get_widget): Add an option whether or not
	the applet icon is displayed at the systray. (rhbz#460703)

2008-09-01  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser.desktop.in.in (Icon): Get rid of the extension.
