@@ -1,3 +1,8 @@
+2010-10-26  Akira TAGOH  <tagoh@redhat.com>
+
+	* src/im-chooser-simple.c: show none in the list as well
+	and get rid of the check button. (rhbz#628420)
+
 2010-09-08  Akira TAGOH  <tagoh@redhat.com>
 
 	* configure.ac: bump to 1.3.2
